# cpp_exp

./: .gitignore  CMakeLists.txt  README.md
eigen/: BUILD.bazel  MODULE.bazel  basic_test.cc
hello/: .bazelrc  BUILD.bazel  CMakeLists.txt  MODULE.bazel  README.md  WORKSPACE  hello.cc  hello_main.cc  hello_test.cc  windows_bazel_cpp.md
opencv_hello/: .bazelrc  .clang-format  .gitignore  BUILD.bazel  MODULE.bazel  WORKSPACE  hello_main.cc  mat_test.cc
opencv_hello/calibration/: BUILD.bazel  birdeye.cc  calibration.cc  calibration.h  calibration_conversions.cc  calibration_conversions.h  calibration_test.cc  intrinsic.cc
opencv_hello/convolution/: BUILD.bazel  convolution_test.cc  filters.cc  filters.h
opencv_hello/fft/: BUILD.bazel  fft.cc  fft.h
opencv_hello/histograms/: BUILD.bazel  histograms.cc  histograms.h
opencv_hello/keypoints/: BUILD.bazel  keypoints.cc  keypoints.h
opencv_hello/misc/: BUILD.bazel  misc.cc  misc.h
opencv_hello/ml/: BUILD.bazel  decision_trees.cc  kmeans.cc  ml.h
opencv_hello/opencv/: BUILD.bazel
opencv_hello/optical_flow/: BUILD.bazel  lk.md  lucas_kanade_main.cc
opencv_hello/sudoku/: BUILD.bazel  bootcamp_main.cc  detection.cc  detection.h  detection_test.cc  digit_detector.cc  digit_detector.h  digit_detector_test.cc  model.yml
opencv_hello/sudoku/training/: BUILD.bazel  train_main.cc
opencv_hello/testdata/optical_flow/: lk.md
opencv_hello/tracking/: BUILD.bazel  farneback.cc  kalman.cc  tracking.h
opencv_hello/transformations/: BUILD.bazel  transformations.cc  transformations.h
