bazel_dep(name = "buildifier_prebuilt", version = "6.4.0", dev_dependency = True)
bazel_dep(name = "rules_foreign_cc", version = "0.10.1")
bazel_dep(name = "googletest", version = "1.14.0.bcr.1")
bazel_dep(name = "abseil-cpp", version = "20240116.2", repo_name = "absl")
bazel_dep(name = "gflags", version = "2.2.2")
bazel_dep(name = "glog", version = "0.7.0")
bazel_dep(name = "protobuf", version = "27.1")
