package(default_visibility = ["//visibility:public"])

cc_library(
    name = "intrinsic",
    srcs = ["intrinsic.cc"],
    hdrs = ["intrinsic.h"],
    deps = [
        "//:opencv",
        "//util",
        "@com_github_google_glog//:glog",
        "@com_google_absl//absl/algorithm:container",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "birdeye",
    srcs = ["birdeye.cc"],
    hdrs = ["birdeye.h"],
    deps = [
        "//:opencv",
        "//util",
        "@com_github_google_glog//:glog",
        "@com_google_absl//absl/algorithm:container",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
    ],
)
