package(default_visibility = ["//visibility:public"])

cc_library(
    name = "intrinsic",
    srcs = ["intrinsic.cc"],
    hdrs = ["intrinsic.h"],
    deps = [
        "//:opencv",
        "//util",
        "@com_github_google_glog//:glog",
        "@com_google_absl//absl/algorithm:container",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "birdeye",
    srcs = ["birdeye.cc"],
    hdrs = ["birdeye.h"],
    deps = [
        "//:opencv",
        "//util",
        "@com_github_google_glog//:glog",
        "@com_google_absl//absl/algorithm:container",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "calibration",
    srcs = ["calibration.cc"],
    hdrs = ["calibration.h"],
    deps = [
        "//:opencv",
        "@com_github_google_glog//:glog",
    ],
)

cc_test(
    name = "calibration_test",
    srcs = ["calibration_test.cc"],
    deps = [
        ":calibration",
        "@com_github_google_glog//:glog",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest_main",
    ],
)
