package(default_visibility = ["//visibility:public"])

load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

cc_library(
    name = "intrinsic",
    srcs = ["intrinsic.cc"],
    hdrs = ["intrinsic.h"],
    deps = [
        "//:opencv",
        "//util",
        "@com_github_google_glog//:glog",
        "@com_google_absl//absl/algorithm:container",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "birdeye",
    srcs = ["birdeye.cc"],
    hdrs = ["birdeye.h"],
    deps = [
        "//:opencv",
        "//util",
        "@com_github_google_glog//:glog",
        "@com_google_absl//absl/algorithm:container",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "calibration",
    srcs = ["calibration.cc"],
    hdrs = ["calibration.h"],
    deps = [
        ":calibration_cc_proto",
        ":util",
        "//:opencv",
        "//util",
        "@com_github_google_glog//:glog",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_protobuf//:protobuf",
    ],
)

cc_test(
    name = "calibration_test",
    srcs = ["calibration_test.cc"],
    deps = [
        ":calibration",
        "@com_github_google_glog//:glog",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest_main",
    ],
)

proto_library(
    name = "calibration_proto",
    srcs = [
        "calibration_config.proto",
        "calibration_data.proto",
    ],
)

cc_proto_library(
    name = "calibration_cc_proto",
    deps = [
        ":calibration_proto",
    ],
)

cc_library(
    name = "util",
    srcs = ["calibration_conversions.cc"],
    hdrs = ["calibration_conversions.h"],
    deps = [
        ":calibration_cc_proto",
        "//:opencv",
        "@com_google_absl//absl/status:statusor",
    ],
)
