package(default_visibility = ["//visibility:public"])

cc_test(
    name = "convolution_test",
    srcs = ["convolution_test.cc"],
    deps = [
        "@com_github_google_glog//:glog",
        "@com_google_absl//absl/status",  # status is required for strings?
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "filters",
    srcs = ["filters.cc"],
    hdrs = ["filters.h"],
    deps = [
        "//:opencv",
        "@com_github_google_glog//:glog",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
    ],
)
