package(default_visibility = ["//visibility:public"])

cc_library(
    name = "histograms",
    srcs = ["histograms.cc"],
    hdrs = ["histograms.h"],
    deps = [
        "//:opencv",
        "@com_github_google_glog//:glog",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
    ],
)
