package(default_visibility = ["//visibility:public"])

cc_library(
    name = "keypoints",
    srcs = ["keypoints.cc"],
    hdrs = ["keypoints.h"],
    deps = [
        "//:opencv",
        "//util",
        "@com_github_google_glog//:glog",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
    ],
)
