load("@rules_foreign_cc//foreign_cc:repositories.bzl", "rules_foreign_cc_dependencies")
load("@rules_foreign_cc//foreign_cc:defs.bzl", "cmake")

cmake(
    name = "opencv_cmake",
    cmake_options = [
        "-DBUILD_LIST=core,highgui,imgcodecs,imgproc",
    ],
    lib_source = "@opencv//:all",
    out_shared_libs = [
        "libopencv_core.so.3.4",
        "libopencv_highgui.so.3.4",
        "libopencv_imgcodecs.so.3.4",
        "libopencv_imgproc.so.3.4",
    ],
    visibility = ["//visibility:public"],
)
