cc_binary(
    name = "bootcamp_main",
    srcs = ["bootcamp_main.cc"],
    data = ["//sudoku/testdata"],
    deps = [
        ":detection",
        "//:opencv",
        "@absl//absl/strings:str_format",
        "@gflags",
        "@glog",
    ],
)

cc_library(
    name = "detection",
    srcs = ["detection.cc"],
    hdrs = ["detection.h"],
    deps = ["//:opencv"],
)

cc_test(
    name = "detection_test",
    srcs = ["detection_test.cc"],
    data = ["//sudoku/testdata"],
    deps = [
        ":detection",
        "@absl//absl/strings",
        "@bazel_tools//tools/cpp/runfiles",
        "@googletest//:gtest_main",
    ],
)
