cc_binary(
    name = "bootcamp_main",
    srcs = ["bootcamp_main.cc"],
    data = ["//sudoku/testdata"],
    deps = [
        ":detection",
        "//:opencv",
        "@absl//absl/strings:str_format",
        "@gflags",
        "@glog",
    ],
)

cc_library(
    name = "detection",
    srcs = ["detection.cc"],
    hdrs = ["detection.h"],
    deps = ["//:opencv"],
)

cc_test(
    name = "detection_test",
    srcs = ["detection_test.cc"],
    data = ["//sudoku/testdata"],
    deps = [
        ":detection",
        "@absl//absl/strings",
        "@bazel_tools//tools/cpp/runfiles",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "digit_detector",
    srcs = ["digit_detector.cc"],
    hdrs = ["digit_detector.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//:opencv",
        "@absl//absl/flags:flag",
        "@absl//absl/strings",
        "@absl//absl/types:optional",
        "@glog",
    ],
)

cc_test(
    name = "digit_detector_test",
    srcs = ["digit_detector_test.cc"],
    data = ["model.yml",
            "//sudoku/testdata"],
    deps = [
        ":digit_detector",
        "//:opencv",
        "@bazel_tools//tools/cpp/runfiles",
        "@googletest//:gtest_main",
    ],
)
