package(default_visibility = ["//visibility:public"])

cc_library(
    name = "tracking",
    srcs = [
        "farneback.cc",
        "kalman.cc",
    ],
    hdrs = ["tracking.h"],
    deps = [
        "//:opencv",
        "@absl//absl/status",
        "@absl//absl/strings",
        "@glog",
    ],
)
